# poland-s_inflation_prediction

./: .gitignore  README.md  pyproject.toml
data/: api_inflation_data.csv
src/: data_processing.py
