[tool.poetry]
name = "inflation-prediction"
version = "0.1.0"
description = "Project predicts inflation in next year 2025."
authors = ["Radoslaw Zamojski <radoslaw.zamojski@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
