[tool.poetry]
name = "inflation-prediction"
version = "0.1.0"
description = "Project predicts inflation in next year 2025."
authors = ["Radoslaw Zamojski <radoslaw.zamojski@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
pydantic = "^2.9.2"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
mypy = "^1.11.2"
black = "^24.8.0"
pylint = "^3.2.6"
coverage = "^7.6.1"
pytest-mock = "^3.14.0"
pytest-fastapi = "^0.1.0"
pytest-benchmark = "^4.0.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
